# tipster-elo

./: .gitignore  ACHIEVEMENT_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
docs/: EXAMPLES_20260709.md  NOTE_20260709_daily.md  PAIR.md  USAGE.md
samples/: tips.csv
src/tipster_elo/: __init__.py  __main__.py  cli.py  elo.py
tests/: test_count_rated.py  test_elo.py  test_elo_change_extra.py  test_elo_delta.py  test_expected_update.py  test_reset.py  test_snapshot.py  test_version.py
